<resources>
    <string name="app_name">G7_MealApp</string>
    <string name="title_home">Let\'s get cooking</string>
    <string name="title_search">Find best recipes for cooking</string>
    <string name="title_aboutus">About us</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="about_us">About us</string>
    <string name="todays_special">Today\'s Special 🥗</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_category">Popular category</string>
    <string name="recently_checked">Recently checked</string>
    <string name="recently_checked_meal">Recently checked meal</string>
    <string name="search_recipes">Search recipes</string>

    <string name="we_found_no_results_for_try_searching_another_meal">We found no results for %1$s, try searching another meal</string>
    <string name="enter_text_to_search">Add a text to search</string>
    <string name="no_internet">You have no internet connection</string>
    <string name="network_error">Unable to resolve host</string>
    <string name="network_connect">Failed to connect</string>
    <string name="meal_name">Meal Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="procedure_description">Procedure description</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="clear">Clear</string>
    <string name="loading">Loading...</string>
    <string name="description">This app offers meal recipes. Users can find meals by category, get a random meal on the home screen, and search for specific meals. Clicking on a search result or a meal on the home page reveals more details like ingredients and cooking procedure. Recently visited meals appear under the \'Recently Checked\' section on the home page.</string>
    <string name="manushi">Wijayagunawardana, Manushi Chinthika - 1111938</string>
    <string name="moises">Ponce Gamez, Moises Guillermo - 1178657</string>
    <string name="lasitha">Weligampola Gedara, Lasitha Prabodha Weligampola - 1150485</string>
</resources>