<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/todaysSpecialTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todays_special"
            android:textSize="@dimen/activity_subheading"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/todaysSpecialCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/regular_margin"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todaysSpecialTxt">

            <ImageView
                android:id="@+id/todaysSpecialImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todays_special"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">

                <TextView
                    android:id="@+id/specialMealName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="14dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"

                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/popCatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/popular_category"
            android:textSize="@dimen/activity_subheading"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/todaysSpecialCard" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/tab_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popCatTitle"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabRippleColor="@null" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/mealsInCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tabCategories">

        </androidx.viewpager2.widget.ViewPager2>


        <TextView
            android:id="@+id/recentlyCheckedTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/recently_checked"
            android:textSize="@dimen/activity_subheading"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/mealsInCategories" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="16dp"
            android:id="@+id/recentlyCheckedMeals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recentlyCheckedTxt">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>